feat(ms-editor): add bulk figures upsert flow
